tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/resource.intent
Document {
	Chapter {
		Section Merge {
			Merging models.
			
			@M
				Resdource r {
					URI = "platform:/resource/intent/My.ecore";
				}
			M@
			
		}
	}
}
